Kubernetes/service/rabbitmq-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  labels:
    app.kubernetes.io/name: rabbitmq
spec:
  ports:
    - name: rabbitmq
      port: 5672
      targetPort: rabbitmq
      protocol: TCP
  selector:
    app.kubernetes.io/name: rabbitmq
